--- a/gb/16/3/28/n7466066.md
+++ b/gb/16/3/28/n7466066.md
@@ -1,34 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵圣地亚哥再爆满 主流赞内涵深邃</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/03/160328014346815-e1459152946881-600x382.jpg" />
 <h6>3月27日下午，神韵纽约艺术团在圣地亚哥市政剧院（Civic Theatre）的最后一场演出圆满落幕。三天四场的演出，场场爆满，再次创下票房佳绩。神韵纯善纯美的演出吸引了圣地亚哥各界的主流观众，很多人意犹未尽，已经开始询问明年的演出时间。图为圣地亚哥市政剧院。（季媛/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2016年03月28日讯】（大纪元美国圣地亚哥记者站报导）3月27日下午，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在圣地亚哥市政剧院（Civic Theatre）的最后一场演出持续爆满，再次创下票房佳绩。神韵艺术家们纯善纯美的演出，将观众带入一个奇幻之旅，体验五千年中华文明，畅游天界圣境和人间美景。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>精湛的演出吸引了圣地亚哥各界的主流观众，有首次观赏的新粉丝，也有每年必看的神韵迷。</p>
+	<p>【大纪元2016年03月28日讯】（大纪元美国圣地亚哥记者站报导）3月27日下午，神韵纽约艺术团在圣地亚哥市政剧院（Civic Theatre）的最后一场演出持续爆满，再次创下票房佳绩。神韵艺术家们纯善纯美的演出，将观众带入一个奇幻之旅，体验五千年中华文明，畅游天界圣境和人间美景。</p>
+<p>神韵精湛的演出吸引了圣地亚哥各界的主流观众，有首次观赏的新粉丝，也有每年必看的神韵迷。</p>
 <p>随着大幕拉开，壮丽的天国世界展现眼前，观众报以赞叹声和掌声。每一个精彩的高难度动作，观众也报以热烈掌声。当天正值复活节，观众表示节目美丽动人，节目中的故事有喜有悲，都蕴含着提升心灵的信息和对回归天国的探求，在复活节看这样一场充满希望的晚会，正是最合适不过。</p>
 <p>演出结束后，观众以热烈的掌声和欢呼声回报神韵演员们精彩的演出。</p>
 <p><strong>总裁：看到生命在信仰中复活</strong></p>
-<figure id="attachment_7466128" aria-describedby="caption-attachment-7466128" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/03/160328013510815-450x311.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7466128 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/03/160328013510815-450x311.jpg" alt="" width="450" b="311" /></a><figcaption id="caption-attachment-7466128" class="wp-caption-text">软体咨询公司总裁Charlie Gragg和Judy Gragg夫妇于复活节观看神韵，感受节目精神内涵。（方圆／大纪元）</figcaption></figure>
+<figure id="attachment_7466128" aria-describedby="caption-attachment-7466128" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://www.epochtimes.com/assets/uploads/2016/03/160328013510815-450x311.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-7466128 size-medium" src="https://www.epochtimes.com/assets/uploads/2016/03/160328013510815-450x311.jpg" alt="" width="450" b="311" /></a><figcaption id="caption-attachment-7466128" class="wp-caption-text">软体咨询公司总裁Charlie Gragg和Judy Gragg夫妇于复活节观看神韵，感受节目精神内涵。（方圆／大纪元）</figcaption></figure>
 <p>Charlie Gragg和Judy Gragg夫妇今年已经是第四次观看神韵了。Gragg先生是软体咨询公司总裁，曾经在华府美国海军任职。Judy Gragg女士在华府五角大楼任职美国空军做技术工作。</p>
 <p>Gragg夫妇最喜欢的节目是舞剧《改变不了的心》，“我们喜欢那个表现老年夫妇修炼的故事，我很欣赏她的精神内涵，而且今天是复活节，节目里的老先生的生命就好像是在信仰中复活了。今天能够看神韵，我觉的很有意义。” Gragg先生说。</p>
 <p>Gragg太太说：“这次我们的座位很靠前，能够看清楚很多的细节，我觉得很有趣。”</p>
-<p>Gragg先生对动态<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>很感兴趣，他说：“给我印象很深的是演员们穿行于舞台和背景天幕之间，绝对的令人惊叹！神韵的舞蹈真是出类拔萃。”</p>
+<p>Gragg先生对动态天幕很感兴趣，他说：“给我印象很深的是演员们穿行于舞台和背景天幕之间，绝对的令人惊叹！神韵的舞蹈真是出类拔萃。”</p>
 <p>Gragg先生认为神韵的节目主持人起到很重要的作用，“我们不能在节目与节目之间读节目册，有了主持人的介绍，我们能够很好地体会节目的内容。”</p>
 <p>Gragg太太对神韵目前无法在中国上演感到很不解。她说：“我知道这个世界是多元的，但是如此美好的艺术不能在中国演出实在令人不可思议。”</p>
 <p><strong>前大学副校长：演出加深对中国文化的理解</strong></p>
-<figure id="attachment_7466139" aria-describedby="caption-attachment-7466139" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/03/1603272146142153-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-7466139 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/03/1603272146142153-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-7466139" class="wp-caption-text">前大学副校长Daniel Gutowski观看了神韵后表示，演出让他加深了对中国文化的理解。（任一鸣/大纪元）</figcaption></figure>
-<p>Daniel Gutowski是一位教育工作者，曾经在圣地亚哥的两所社区大学（Miramar College和Mesa College）任副校长，并在社区大学联盟任高管，后来他拥有自己的咨询顾问公司。他对演出非常喜欢：“我喜爱这场演出，非常好，编舞非常优秀，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%8D%E9%A5%B0.md#1">服饰</a>美不胜收，而且给人行云流水之感，非常出色。”</p>
+<figure id="attachment_7466139" aria-describedby="caption-attachment-7466139" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://www.epochtimes.com/assets/uploads/2016/03/1603272146142153-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-7466139 size-medium" src="https://www.epochtimes.com/assets/uploads/2016/03/1603272146142153-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-7466139" class="wp-caption-text">前大学副校长Daniel Gutowski观看了神韵后表示，演出让他加深了对中国文化的理解。（任一鸣/大纪元）</figcaption></figure>
+<p>Daniel Gutowski是一位教育工作者，曾经在圣地亚哥的两所社区大学（Miramar College和Mesa College）任副校长，并在社区大学联盟任高管，后来他拥有自己的咨询顾问公司。他对演出非常喜欢：“我喜爱这场演出，非常好，编舞非常优秀，服饰美不胜收，而且给人行云流水之感，非常出色。”</p>
 <p>他说：“我非常喜爱演出中的舞蹈，非常流畅飘逸。”</p>
 <p>中西方乐器结合的现场乐团伴奏对Gutowski是个惊喜。“现场乐团是一流的，我非常喜爱现场乐团，演出中的音乐非常、非常好。”他说：“神韵音乐让人精力充沛，尤其最后的节目，非常棒。”</p>
 <p>神韵演出用丰富的歌舞表现中华五千年文化的精髓。Gutowski对此很有感触：“演出中有历史内涵，观看完之后我们了解到中国不同的舞蹈风格、不同的文化风格，还有不同地区的风土人情。”</p>
 <p>作为一名教育工作者，Gutowski非常认同神韵恢复传统文化的努力。他说：“恢复那些传统非常有价值。我知道在某段时期中国很多传统文化被丢弃了，他们（中共）从中国人那夺去了很多东西。我很高兴看到传统文化的回归。”</p>
 <p>Gutowski表示，节目很有教育意义：“演出让我加深了中国文化的理解。”</p>
-<p><strong>职业贝斯手：着迷于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%8C%E8%83%A1.md#1">二胡</a>演奏</strong></p>
-<figure id="attachment_7466133" aria-describedby="caption-attachment-7466133" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/03/1603272145132153.jpg"><img class="wp-image-7466133 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/03/1603272145132153-450x307.jpg" alt="" width="450" b="307" /></a><figcaption id="caption-attachment-7466133" class="wp-caption-text">职业贝斯手Andy Jermstad先生带88岁老母观看了神韵演出。他对神韵的音乐、乐团、总体制作倍加赞赏。（方圆／大纪元）</figcaption></figure>
-<p>职业贝斯手Andy Jermstad先生带88岁母亲一同观赏了3月27日下午的神韵演出。作为音乐人，Jermstad先生认为神韵中西乐器合璧的乐团非常优秀，尤其是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%8C%E8%83%A1.md#1">二胡</a>，更是让他着迷。“我非常喜爱二胡这个乐器，她和小提琴的声音和音色不同。二胡的演奏技巧也很特别，她和小提琴不一样，好像是拨弦，不像小提琴有自己的指板，二胡演奏家是在弦上拨弦可以演奏出如此美好的琴音，令人着迷。中国音乐的音阶与西方古典音乐不同，里面还有一些和声小调，是很独特的。”</p>
+<p><strong>职业贝斯手：着迷于二胡演奏</strong></p>
+<figure id="attachment_7466133" aria-describedby="caption-attachment-7466133" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://www.epochtimes.com/assets/uploads/2016/03/1603272145132153.jpg"><img decoding="async" class="wp-image-7466133 size-medium" src="https://www.epochtimes.com/assets/uploads/2016/03/1603272145132153-450x307.jpg" alt="" width="450" b="307" /></a><figcaption id="caption-attachment-7466133" class="wp-caption-text">职业贝斯手Andy Jermstad先生带88岁老母观看了神韵演出。他对神韵的音乐、乐团、总体制作倍加赞赏。（方圆／大纪元）</figcaption></figure>
+<p>职业贝斯手Andy Jermstad先生带88岁母亲一同观赏了3月27日下午的神韵演出。作为音乐人，Jermstad先生认为神韵中西乐器合璧的乐团非常优秀，尤其是二胡，更是让他着迷。“我非常喜爱二胡这个乐器，她和小提琴的声音和音色不同。二胡的演奏技巧也很特别，她和小提琴不一样，好像是拨弦，不像小提琴有自己的指板，二胡演奏家是在弦上拨弦可以演奏出如此美好的琴音，令人着迷。中国音乐的音阶与西方古典音乐不同，里面还有一些和声小调，是很独特的。”</p>
 <p>Jermstad先生赞叹神韵舞蹈演员们的高难度动作与技巧，他说：“演出令我非常惊奇的是，那些舞蹈演员使那些动作看起来如此容易，而我知道那些动作一点都不容易。神韵演出将高难度技巧的精准和艺术的美好和优雅结合在一起，是一场非常赏心悦目的演出。”</p>
 <p>他赞叹：“神韵演出太好了，有舞剧、有神话故事，还有一些喜剧气氛，均衡得非常好。他们以艺术的方式来维持文化的生命力。”</p>
 <p>他说：“从演出中我学到了一些新东西。我回去要上网进一步了解法轮大法。我原来并不知道，在共产的中国有那么多的压迫，中共不允许这种艺术形式，我知道中共是无神论，但是我不知道他们做得这么过头。”</p>
@@ -40,47 +40,36 @@
 <div class="hsplitter ui-draggable"></div>
 <div class="input-area group-chat-input-area"></div>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/12/n4661059.md#1">舞蹈艺术家6观神韵：顶级演出人人该看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/19/n4666319.md#1">政府官员飞赴巴塞罗那看神韵：美不胜收</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/20/n4666763.md#1">扶轮社数十人齐赏神韵“二胡演奏很饱满”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/20/n4667097.md#1">台神韵票房超火热 企业界广传口碑大量订票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/22/n4668131.md#1">协会秘书长赞神韵展现敬天思想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/23/n7437156.md#1">青商会长：不看神韵可能一辈子很后悔</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/12/n4661059.md#1">舞蹈艺术家6观神韵：顶级演出人人该看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/19/n4666319.md#1">政府官员飞赴巴塞罗那看神韵：美不胜收</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/20/n4666763.md#1">扶轮社数十人齐赏神韵“二胡演奏很饱满”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/20/n4667097.md#1">台神韵票房超火热 企业界广传口碑大量订票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/22/n4668131.md#1">协会秘书长赞神韵展现敬天思想</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/23/n7437156.md#1">青商会长：不看神韵可能一辈子很后悔</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/15/n10058256.md#1" target="_blank">林辉：老百姓恨日本人也恨八路军的背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3963792.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（1）</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/3/n10358233.md#1" target="_blank">共产暴政录：土改是中共邪恶基因的实践</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923685.md#1">【百年真相】故意黑江青？上海公安局长被关7年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13921208.md#1">【品读唐诗】诗仙李白的“寻隐者不遇”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921256.md#1">元宵节俗：一颗元宵汤圆承载的历史超乎想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927300.md#1">【秦鹏观察】被绑架付千万赎金 广西小官刷屏了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927174.md#1">【新闻大家谈】王维洛：三门峡大坝埋巨雷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927536.md#1">【中国禁闻】中共末日危机 习再提“惊涛骇浪”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926114.md#1">全国疫苗受害家庭在北京集体起诉国务院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926494.md#1">组图：FBI公布处理中共间谍气球的照片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926500.md#1">【一线采访】民众抗议新医保 武汉压力下让步</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925757.md#1">深夜弹钢琴被说扰邻 周杰伦曾用一句话回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925663.md#1">富商丈夫被爆涉嫌诈骗 王丽坤豪宅名车遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926612.md#1">陆综男星唐小强土耳其强震中遇难 年仅30岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926349.md#1">丁强植葬阳明山 妻李璇跪地献花恸别挚爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927287.md#1">曾身陷囹圄财产归零 刘晓庆开直播卖书法作品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923218.md#1">消除胃酸逆流 喝苹果醋17个不可思议的好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925579.md#1">喝不完的葡萄酒别扔 厨房5大妙用 调味绝佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927000.md#1">睽违三年 札幌冰雪节壮观雪雕巡礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926920.md#1">浴巾如何清洗才会柔软和吸水？ 专家告诉你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924042.md#1">刻意隐藏负面情绪 小心走向绝望的深渊</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/3/28/n7466066.htm">神韵圣地亚哥再爆满 主流赞内涵深邃</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/16/3/28/n7466066.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405472.md#1">辛生得神示 改邪归正得福报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421611.md#1">【佳音时刻】川普施压俄停战 中共砸钱市场冷对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421101.md#1">【财经非常道】关闭DEI 川普带领美国回归常识</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420869.md#1">川普废止出生公民权行政令 被法官暂停执行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420134.md#1">赵薇主动公布离婚日期 已清空黄有龙公司股票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420047.md#1">40岁大陆女歌手申烨猝逝 知情者曝死因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420169.md#1">胡歌获官方披露任新职 大陆明星当官引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420499.md#1">这7个下班后的习惯 会让你在工作时分心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415455.md#1">眼霜对抗眼周老化？ 还需另外几招</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/3/28/n7466066.htm">神韵圣地亚哥再爆满 主流赞内涵深邃</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/16/3/28/n7466066.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
